[package]
name = "tfl-status"
version = "0.1.0"
authors = ["Jack Diver <jackdiver@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde_json = "1.0"
prettytable-rs = "0.8.0"
textwrap = { version = "0.11", features = ["term_size"] }
structopt = "0.3.4"

